[org] A new todo item to write abuot how i keep project local todos

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@ pycarolinas 2012 recap
 a page about being vegan
 a page about being atheist
 a page about being a socialist
+A description of my localized todo alias
